[gd_scene load_steps=8 format=3 uid="uid://0usmghy5kky5"]

[ext_resource type="Script" uid="uid://dfv8hjx4ejtec" path="res://Game.gd" id="1_wbfu4"]
[ext_resource type="Script" uid="uid://n1lve53jt1ct" path="res://Background.gd" id="2_u44n3"]
[ext_resource type="Script" uid="uid://3jnypf7n44v7" path="res://Snake.gd" id="3_sb48q"]
[ext_resource type="Script" uid="uid://b588cj70ob08c" path="res://FoodManager.gd" id="4_sb48q"]
[ext_resource type="Script" uid="uid://bp26waoe7p4e0" path="res://UI.gd" id="5_t88pq"]
[ext_resource type="AudioStream" uid="uid://cj7rpp2rvllr3" path="res://audio/loopgame.ogg" id="6_r0x5m"]
[ext_resource type="AudioStream" uid="uid://ds8pbgap17tuj" path="res://audio/death-sound.ogg" id="7_3mrqo"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wbfu4")

[node name="Background" type="Node2D" parent="."]
script = ExtResource("2_u44n3")

[node name="Snake" type="Node2D" parent="."]
script = ExtResource("3_sb48q")

[node name="FoodManager" type="Node2D" parent="."]
script = ExtResource("4_sb48q")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_t88pq")

[node name="DPad" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="UpButton" type="Button" parent="UI/DPad"]
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.5
offset_right = 32.5
offset_bottom = 75.0
grow_horizontal = 2
text = "↑"

[node name="DownButton" type="Button" parent="UI/DPad"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_top = -85.0
offset_right = 32.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "↓"

[node name="LeftButton" type="Button" parent="UI/DPad"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -42.5
offset_right = 75.0
offset_bottom = 32.5
grow_vertical = 2
text = "←"

[node name="RightButton" type="Button" parent="UI/DPad"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -42.5
offset_right = -10.0
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
text = "→"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_r0x5m")

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3mrqo")
